lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_append_bs_escaped/buffer_append_bs_escaped3/buffer_append_bs_escaped3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_append_bs_escaped/buffer_append_bs_escaped3/buffer_append_bs_escaped3.c:31:30: error: use of undeclared identifier 's__b'
    buffer_append_bs_escaped(s__b ,p_q_b__s ,q_b__len );
                             ^
1 error generated.
